# spinning_cube

./: Cargo.toml  README.md
src/: main.rs
src/shader/: f.glsl  v.glsl
