[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "spinning_cube"
version = "0.1.0"

[dependencies]
cgmath = "0.14.1"
glutin = "0.9.0"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx"
optional = false

[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx"
optional = false
